--- a/css/Projet_SAE14_vitesse_1.css
+++ b/css/Projet_SAE14_vitesse_1.css
@@ -66,7 +66,8 @@ nav a:not(.icon){
 }
 .suite img{
     border-radius: 25px;
-    width: 50%;  
+    width: 50%;
+    height: 100%;
     padding: 5px;         
 }
 .a1{
